# aeye-cmd-vel-uart-bridge

./: .gitignore  AGENTS.md  README.md  package.xml  setup.cfg  setup.py
cmd_vel_uart_bridge/: cmd_vel_uart_bridge_node.py  cmd_vel_ws_bridge_node.py  control_uart_bridge.py  salus_bridge_node.py  test_comms.py
cmd_vel_uart_bridge/salus_v2/: __init__.py  config.py  controller.py  gpio.py  models.py  protocol.py  uart_async.py
launch/: bridge.launch.py  cmd_vel_uart_bridge.launch.py  control_uart_bridge.launch.py  salus_bridge.launch.py  web_control.launch.py  ws_bridge.launch.py
resource/: cmd_vel_uart_bridge
web/: Control.html
