<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmd_vel_uart_bridge</name>
  <version>0.0.1</version>
  <description>Bridge from /cmd_vel_safe to the UART protocol used by RASPY_SALUS.</description>
  <license>MIT</license>
  <maintainer email="todo@example.com">TODO</maintainer>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
